# loft

./: .fuse_hidden000db65f00003931  .gitattributes  .gitignore  00-vs-rust.html  01-keywords.html  02-text.html  03-integer.html  04-boolean.html  05-float.html  06-function.html  07-vector.html  08-struct.html  09-enum.html  10-sorted.html  11-index.html  12-hash.html  13-file.html  15-lexer.html  16-parser.html  17-libraries.html  18-locks.html  19-threading.html  20-logging.html  21-random.html  22-time.html  23-safety.html  24-json.html  25-generics.html  26-closures.html  27-coroutines.html  28-tuples.html  29-match.html  30-formatting.html  31-ref-forward.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  STORE_LEAK_STATUS.md  (+24 more)
.claude/: settings.json
.claude/agents/: code-quality-validator.md  doc-writer.md  test-writer.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  README.md  run_bench.sh
bench/01_fibonacci/: bench.loft  bench.py  bench.rs
bench/02_sum_loop/: bench.loft  bench.py  bench.rs
bench/03_sieve/: bench.loft  bench.py  bench.rs
bench/04_collatz/: bench.loft  bench.py  bench.rs
bench/05_mandelbrot/: bench.loft  bench.py  bench.rs
bench/06_newton_sqrt/: bench.loft  bench.py  bench.rs
bench/07_string_build/: bench.loft  bench.py  bench.rs
bench/08_word_count/: bench.loft  bench.py  bench.rs
bench/09_matrix_mul/: bench.loft  bench.py  bench.rs
bench/10_sort/: bench.loft  bench.py  bench.rs
bench/11_par/: bench.loft  bench.py  bench.rs
default/: 01_code.loft  02_images.loft  03_text.loft  04_stacktrace.loft  05_coroutine.loft  06_json.loft
doc/: 00-performance.html  00-vs-python.html  00-vs-rust.html  01-keywords.html  02-text.html  03-integer.html  04-boolean.html  05-float.html  06-function.html  07-vector.html  08-struct.html  09-enum.html  10-sorted.html  11-index.html  12-hash.html  13-file.html  14-image.html  15-lexer.html  16-parser.html  17-libraries.html  18-locks.html  19-threading.html  20-logging.html  21-random.html  22-time.html  23-safety.html  24-json.html  25-generics.html  26-closures.html  27-coroutines.html  28-tuples.html  29-match.html  30-formatting.html  DEVELOPERS.md  PROMPTS.md  brick-buster.html  examples.js  gallery-examples.js  gallery.html  index.html  (+29 more)
doc/claude/: ASSIGNMENT.md  BITING_PLAN.md  BLOCK_COPY.md  BRITTLE.md  BROADENING.md  BUG_FIX_PLAN.md  BYTECODE_CACHE.md  CAVEATS.md  CHANGELOG_TECHNICAL.md  CODE.md  COMPILER.md  CONST_DATA.md  CONST_REF.md  CONST_STORE.md  COROUTINE.md  DATABASE.md  DEBUG.md  DEBUG_PLAN.md  DESIGN.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  DIVIDE.md  DOC.md  DX.md  EXTERNAL_LIBS.md  FAILURES.md  FORMATTER.md  GALLERY_CI.md  GAME_CLIENT_LIB.md  GAME_INFRA.md  GAME_TESTING.md  GAPS.md  HTML_EXPORT.md  INCONSISTENCIES.md  INTEGER_SIZE.md  INTERFACES.md  INTERMEDIATE.md  INTERNALS.md  LAZY_STDLIB.md  LIFETIME.md  (+47 more)
doc/pkg/: loft.d.ts  loft.js  loft_bg.wasm
ide/scripts/: build-base-fs.js
lib/: code.loft  docs.loft  glb.loft  lexer.loft  logger.loft  overland.loft  parser.loft  testlib.loft  wall.loft
lib/arguments/: arguments.loft
lib/crypto/: loft.toml
lib/game_protocol/: loft.toml
lib/graphics/: loft.toml
lib/graphics/native/: Cargo.toml
lib/graphics/native/src/: audio.rs  lib.rs  shader.rs  text.rs  window.rs
lib/graphics/native/tests/: headless_safety.rs
lib/imaging/: loft.toml
lib/moros_render/: loft.toml
lib/moros_sim/: loft.toml
lib/random/: loft.toml
lib/server/: loft.toml
lib/shapes/: loft.toml
lib/web/: loft.toml
loft-ffi/: Cargo.toml
loft-ffi/src/: lib.rs
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
scripts/: build-gallery-examples.loft  build-playground-examples.loft  build-playground-examples.py  find_problems.sh
scripts/browser/: coop_server.py  golden_demo.html  headless_caps.html  run_caps.sh  run_golden.sh
src/: base64.rs  cache.rs  calc.rs  codegen_runtime.rs  compile.rs  const_eval.rs  crash_report.rs  create.rs  data.rs  diagnostics.rs  documentation.rs  extensions.rs  fill.rs  formatter.rs  gendoc.rs  generation.rs  hash.rs  json.rs  keys.rs  lexer.rs  lib.rs  log_config.rs  logger.rs  main.rs  manifest.rs  migrate_long.rs  native.rs  native_utils.rs  ops.rs  parallel.rs  platform.rs  png_store.rs  radix_tree.rs  registry.rs  scopes.rs  sha256.rs  stack.rs  store.rs  test_runner.rs  tree.rs  (+5 more)
src/database/: allocation.rs  format.rs  io.rs  mod.rs  search.rs  structures.rs  types.rs
src/generation/: calls.rs  coroutine.rs  dispatch.rs  emit.rs  mod.rs  pre_eval.rs  text.rs
src/parser/: builtins.rs  collections.rs  control.rs  definitions.rs  expressions.rs  fields.rs  mod.rs  objects.rs  operators.rs  vectors.rs
src/state/: codegen.rs  debug.rs  io.rs  mod.rs  text.rs
src/variables/: intervals.rs  mod.rs  slots.rs  slots_v2.rs  validate.rs
tests/: bytecode_cache.rs  data_import.rs  data_structures.rs  doc_hygiene.rs  dump_ignored_tests.py  enums.rs  exit_codes.rs  expressions.rs  expressions_auto_convert.rs  format.rs  format_strings.rs  frame_vars.rs  graphics_gold.rs  html_wasm.rs  ignored_tests.baseline  immutability.rs  imports.rs  issues.rs  leak.rs  log_config.rs  logger_severity.rs  match.rs  native.rs  native_ext.rs  native_loader.rs  objects.rs  package_layout.rs  parse_errors.rs  plugin_api.rs  random.rs  sizes.rs  slot_assign.rs  slot_v2_baseline.rs  slots.rs  strings.rs  testing.rs  threading.rs  threading_chars.rs  time.rs  vectors.rs  (+2 more)
tests/common/: mod.rs
tests/docs/: 00-general.loft  01-keywords.loft  02-text.loft  03-integer.loft  04-boolean.loft  05-float.loft  06-function.loft  07-vector.loft  08-struct.loft  09-enum.loft  10-sorted.loft  11-index.loft  12-hash.loft  13-file.loft  14-image.loft  15-lexer.loft  16-parser.loft  17-libraries.loft  18-locks.loft  19-threading.loft  20-logging.loft  21-random.loft  22-time.loft  23-safety.loft  24-json.loft  25-generics.loft  26-closures.loft  27-coroutines.loft  28-tuples.loft  29-match.loft  30-formatting.loft  31-ref-forward.loft
tests/dumps/: 01_code.loft.txt  (+164 more)
tools/: wasm_repro.mjs
(+446 files in other folders)
