[package]
name = "loft"
version = "0.8.2"
edition = "2024"
authors = ["Jurjen Stellingwerff"]
license = "LGPL-3.0-or-later"
description = "The loft scripting language interpreter"
homepage = "https://github.com/jjstwerff/loft"
repository = "https://github.com/jjstwerff/loft"
keywords = ["language", "interpreter", "scripting"]
categories = ["command-line-utilities", "compilers"]

[lib]
name = "loft"
path = "src/lib.rs"

[[bin]]
name = "loft"
path = "src/main.rs"

[[bin]]
name = "gendoc"
path = "src/gendoc.rs"

[features]
default  = ["png", "mmap", "random"]
png      = ["dep:png"]
mmap     = ["dep:mmap-storage"]
random   = ["dep:rand_core", "dep:rand_pcg"]

[dependencies]
rand_core    = { version = "0.9", optional = true }
rand_pcg     = { version = "0.9", optional = true }
png          = { version = "0.17", optional = true }
mmap-storage = { version = "0.10", optional = true }
dirs         = "5"

[dev-dependencies]
stdext = "0.3"

[profile.test]
# Reduce DWARF to line-tables only; keeps file:line in backtraces and
# preserves debug_assertions, but skips per-variable debug info.
# Cuts test-binary compile and link time significantly.
debug = 1

[package.metadata.deb]
maintainer = "Jurjen Stellingwerff <j.stellingwerff@gmail.com>"
copyright = " 2026, Jurjen Stellingwerff <j.stellingwerff@gmail.com>"
extended-description = """A simple to use scripting language with rust-like syntax"""
license-file = ["LICENSE"]
assets = [
    ["target/release/loft", "usr/bin/", "755"],
]
depends = "$auto"
section = "development"
priority = "optional"

[package.metadata.rpm]
name = "loft"
version = "$version"
license = "LGPL-3.0-or-later"
requires = ["libc"]
assets = [
    ["target/release/your_app_name", "/usr/bin/your_app_name", "755"]
]

