[package]
name = "loft"
version = "0.8.4"
edition = "2024"
authors = ["Jurjen Stellingwerff"]
license = "LGPL-3.0-or-later"
description = "The loft scripting language interpreter"
homepage = "https://github.com/jjstwerff/loft"
repository = "https://github.com/jjstwerff/loft"
keywords = ["language", "interpreter", "scripting"]
categories = ["command-line-utilities", "compilers"]

[lib]
name = "loft"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loft"
path = "src/main.rs"

[[bin]]
name = "gendoc"
path = "src/gendoc.rs"

[features]
default      = ["mmap", "random", "threading", "registry", "native-extensions"]
threading    = ["dep:rayon"]
wasm         = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen",
                "dep:js-sys", "dep:web-sys", "png", "dep:fontdue",
                "dep:console_error_panic_hook"]
wasm-threads = ["wasm", "threading", "dep:wasm-bindgen-rayon"]
png          = ["dep:png"]
mmap         = ["dep:mmap-storage"]
random            = ["dep:rand_core", "dep:rand_pcg"]
native-extensions = ["dep:libloading"]
registry     = ["dep:ureq", "dep:zip"]
# Development aid — when set, `tests/testing.rs::Test::drop` writes each
# test's assembled loft source to `/tmp/loft-repro/<test_name>.loft`
# *before* running it, with a `fn main() { test(); }` tail appended so
# the file is directly runnable via `target/release/loft <path>`.  Useful
# for failing `issues.rs` / `expressions.rs` cases whose `code!`/`expr!`
# macros hide the full source — grab it off disk, run it standalone,
# iterate.  No runtime impact when the feature is off (default).
emit-repro   = []

[dependencies]
rand_core          = { version = "0.9", optional = true }
rand_pcg           = { version = "0.9", optional = true }
png                = { version = "0.17", optional = true }
fontdue            = { version = "0.9", optional = true }
mmap-storage       = { version = "0.10", optional = true }
dirs               = "5"
wasm-bindgen       = { version = "0.2", optional = true }
serde              = { version = "1", optional = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys             = { version = "0.3", optional = true }
web-sys            = { version = "0.3", optional = true, features = ["console"] }
wasm-bindgen-rayon = { version = "1.2", optional = true }
rayon              = { version = "1.10", optional = true }
libloading         = { version = "0.8", optional = true }
loft-ffi           = { path = "loft-ffi" }
console_error_panic_hook = { version = "0.1", optional = true }
ureq               = { version = "2", optional = true }
zip                = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc               = "0.2"

[dev-dependencies]
stdext = "0.3"
png    = "0.17"

[profile.test]
# Reduce DWARF to line-tables only; keeps file:line in backtraces and
# preserves debug_assertions, but skips per-variable debug info.
# Cuts test-binary compile and link time significantly.
debug = 1

# Optimise the loft library and its dependencies even under
# `cargo test` (debug profile).  `debug_assertions` stay ON (so the
# leak-check, addr/valid guards, and other safety nets that catch real
# bugs still fire), but the interpreter's hot inner loops
# (`Store::addr`, `Store::valid`, the opcode dispatch table) get
# inlined and devirtualised by LLVM.  Cuts loft-interpreter-heavy
# tests like `p122_gl_collision_struct_api` from ~67s to a few seconds.
# Test code itself stays at opt-level=0 so test compile time is
# unaffected (the test binaries themselves use [profile.test] above).
[profile.dev]
opt-level = 1

# Strip debug_assertions specifically inside the loft library when
# tests are being built.  The hot-path `Store::addr` / `Store::valid`
# / `keys::store` guards add ~270x overhead to interpreter-heavy
# tests like `p122_gl_collision_struct_api` (67s with vs ~250ms
# without).  The genuinely-load-bearing safety checks (the
# leak-check panic at `src/state/debug.rs:1045`, the leak-budget
# panics, the LOFT_LOG-driven traces) are all real `panic!`/`assert!`
# calls and are unaffected.  Test code itself (`tests/*.rs`) still
# has debug_assertions on via [profile.test].
[profile.dev.package.loft]
debug-assertions = false

[package.metadata.deb]
maintainer = "Jurjen Stellingwerff <j.stellingwerff@gmail.com>"
copyright = " 2026, Jurjen Stellingwerff <j.stellingwerff@gmail.com>"
extended-description = """A simple to use scripting language with rust-like syntax"""
license-file = ["LICENSE"]
assets = [
    ["target/release/loft", "usr/bin/", "755"],
]
depends = "$auto"
section = "development"
priority = "optional"

[package.metadata.rpm]
name = "loft"
version = "$version"
license = "LGPL-3.0-or-later"
requires = ["libc"]
assets = [
    ["target/release/your_app_name", "/usr/bin/your_app_name", "755"]
]



[package.metadata.wasm-pack.profile.release]
# wasm-opt strips the externref table's max field, so
# __wbindgen_init_externref_table's `table.grow(4)` call fails at
# instantiation time with "Failed to grow table" in browsers and Node.
# Skip wasm-opt to keep the table descriptor intact; the ~30 % size
# increase is acceptable compared to a non-functional deployed site.
wasm-opt = false

