[package]
name = "loft-ffi"
version = "0.1.0"
edition = "2024"
authors = ["Jurjen Stellingwerff"]
license = "LGPL-3.0-or-later"
description = "Helpers for writing loft native extension cdylibs"
homepage = "https://github.com/jjstwerff/loft"
repository = "https://github.com/jjstwerff/loft"
keywords = ["loft", "ffi", "extension"]
categories = ["api-bindings"]

[lib]
name = "loft_ffi"

[dependencies]
