[package]
name = "loft-graphics-native"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loft-ffi = { path = "../../../loft-ffi" }
glutin = "0.32"
gl = "0.14"
raw-window-handle = "0.6"
glutin-winit = "0.5"
winit = "0.30"
fontdue = "0.9"
png = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
